// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Component should render a AppBar Component 1`] = `
<WithStyles(AppBar)
  position="fixed"
>
  <WithStyles(Toolbar)>
    <WithStyles(IconButton)
      aria-label="Menu"
      className="Navbar-menuButton-4"
      color="inherit"
    >
      <pure(MenuIcon) />
    </WithStyles(IconButton)>
    <WithStyles(Typography)
      color="inherit"
      variant="title"
    >
      WIPLean
    </WithStyles(Typography)>
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;

exports[`Navbar Component should render its children 1`] = `
<WithStyles(AppBar)
  position="fixed"
>
  <WithStyles(Toolbar)>
    <WithStyles(IconButton)
      aria-label="Menu"
      className="Navbar-menuButton-4"
      color="inherit"
    >
      <pure(MenuIcon) />
    </WithStyles(IconButton)>
    <WithStyles(Typography)
      color="inherit"
      variant="title"
    >
      WIPLean
    </WithStyles(Typography)>
    <div>
      Hello
    </div>
  </WithStyles(Toolbar)>
</WithStyles(AppBar)>
`;
